force-app/main/default/objects/order_line_POE__c/order_line_POE__c.object-meta.xml
<CustomObject>
    <label>Order Line</label>
    <nameField>
        <displayFormat>OL-{00000000}</displayFormat>
        <label>Order Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>