force-app/main/default/objects/order_line_POE__c/fields/Accounting_treatment_deal__c.field-meta.xml
<CustomField>
    <fullName>Accounting_treatment_deal__c</fullName>
    <label>Accounting treatment (deal)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>