force-app/main/default/objects/order_line_POE__c/fields/AddOn__c.field-meta.xml
<CustomField>
    <fullName>AddOn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AddOn</label>
    <referenceTo>AddOn__c</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines_POE</relationshipName>
    <type>Lookup</type>
</CustomField>