force-app/main/default/objects/order_line_POE__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>TEXT(Component_Pricing__r.Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>