force-app/main/default/objects/order_line_POE__c/fields/City_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>City_Surcharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>City Surcharge</label>
    <type>Checkbox</type>
</CustomField>