force-app/main/default/objects/order_line_POE__c/fields/Component_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Component_Pricing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component Pricing</label>
    <referenceTo>Component_Pricing__c</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines_POE</relationshipName>
    <type>Lookup</type>
</CustomField>