force-app/main/default/objects/order_line_POE__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <formula>IF(NOT(ISBLANK(Component__c) ) , TEXT(Component__r.Component_Type__c),  IF(NOT(ISBLANK(TAD_Booking_Records__c ) ), TEXT(TAD_Booking_Records__r.Booked_Component_Type__c), &apos;Stay Departure date surcharge&apos;)  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Component Type</label>
    <type>Text</type>
</CustomField>