force-app/main/default/objects/order_line_POE__c/fields/Cost_AUD__c.field-meta.xml
<CustomField>
    <fullName>Cost_AUD__c</fullName>
    <label>Cost AUD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>