force-app/main/default/objects/order_line_POE__c/fields/Costed_Rate__c.field-meta.xml
<CustomField>
    <fullName>Costed_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Costed Rate</label>
    <referenceTo>Costed_Rate__c</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>