force-app/main/default/objects/order_line_POE__c/fields/Cruise_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Upgrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cruise Upgrade</label>
    <referenceTo>Cruise_Upgrade__c</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>