force-app/main/default/objects/order_line_POE__c/fields/Customisation_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Customisation_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customisation Acknowledged</label>
    <type>Checkbox</type>
</CustomField>