force-app/main/default/objects/order_line_POE__c/fields/Customisation_Acknowledged_Date__c.field-meta.xml
<CustomField>
    <fullName>Customisation_Acknowledged_Date__c</fullName>
    <label>Customisation Acknowledged Date</label>
    <type>DateTime</type>
</CustomField>