force-app/main/default/objects/order_line_POE__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines_POE</relationshipName>
    <type>Lookup</type>
</CustomField>