force-app/main/default/objects/order_line_POE__c/fields/Deal_Name_as_Integer__c.field-meta.xml
<CustomField>
    <fullName>Deal_Name_as_Integer__c</fullName>
    <formula>VALUE(Order_Line_Item__r.Deal__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Name as Integer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>