force-app/main/default/objects/order_line_POE__c/fields/Departure_date__c.field-meta.xml
<CustomField>
    <fullName>Departure_date__c</fullName>
    <formula>TAD_Order__r.ordexp_departure_date__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure date</label>
    <type>Text</type>
</CustomField>