force-app/main/default/objects/order_line_POE__c/fields/departures_dates__c.field-meta.xml
<CustomField>
    <fullName>departures_dates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>departures dates</label>
    <referenceTo>departures_dates__c</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>