force-app/main/default/objects/order_line_POE__c/fields/Document_Currency__c.field-meta.xml
<CustomField>
    <fullName>Document_Currency__c</fullName>
    <formula>IF(NOT(ISBLANK(Component__c)) , Component_Pricing__r.Component_Currency__c, IF( NOT(ISBLANK(mp_order_customisation__c)) , Quote_Detail__r.mp_Merchant_Currency__c,  IF( NOT(ISBLANK(TAD_Booking_Records__c)) ,  TAD_Booking_Records__r.Currency__c,   TEXT(Order_Night__r.CurrencyIsoCode)) ) )</formula>
    <label>Document Currency</label>
    <type>Text</type>
</CustomField>