force-app/main/default/objects/order_line_POE__c/fields/Dual_Currency__c.field-meta.xml
<CustomField>
    <fullName>Dual_Currency__c</fullName>
    <formula>&apos;AUD&apos; +  Document_Currency__c</formula>
    <label>Dual Currency</label>
    <type>Text</type>
</CustomField>