force-app/main/default/objects/order_line_POE__c/fields/Dual_Gross_Cost__c.field-meta.xml
<CustomField>
    <fullName>Dual_Gross_Cost__c</fullName>
    <formula>IF(Dual_Rate__c  &lt;&gt; 0,  Gross_Cost__c /  Dual_Rate__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dual Gross Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>