force-app/main/default/objects/order_line_POE__c/fields/Dual_Rate__c.field-meta.xml
<CustomField>
    <fullName>Dual_Rate__c</fullName>
    <formula>IF(ISBLANK(Quote_Detail__c) ,Component_Pricing__r.Spot_Rate_AUD__c,  Quote_Detail__r.Spot_Rate_AUD__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dual Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>