force-app/main/default/objects/order_line_POE__c/fields/ff_DT_archetype__c.field-meta.xml
<CustomField>
    <fullName>ff_DT_archetype__c</fullName>
    <formula>IF(Merchant_Type__c ==&apos;Single Line Expense&apos;,&apos;SLE&apos;+&apos;;&apos;+mp_merchant__c +&apos;;&apos;+ Order_Line_Item__r.Deal__c +&apos;;&apos;+ Order_Line_Item__r.ordexp_departure_date__c+&apos;;&apos;+ Component__c, IF(Merchant_Type__c ==&apos;Multi Line Expense&apos;,&apos;MLE&apos;+&apos;;&apos;+ mp_merchant__c, &apos;Populate Merchant Type&apos;) )+&apos;;&apos;+IF( TEXT(ff_entity__c)=&apos;Trip A Deal Pty Limited&apos; ,&apos;TADCompany&apos;, &apos;TNZCompany&apos;)</formula>
    <label>DT archetype</label>
    <type>Text</type>
</CustomField>