force-app/main/default/objects/order_line_POE__c/fields/ff_entity__c.field-meta.xml
<CustomField>
    <fullName>ff_entity__c</fullName>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trip A Deal Pty Limited</fullName>
            </value>
            <value>
                <fullName>TripADeal (NZ) Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>