force-app/main/default/objects/order_line_POE__c/fields/ff_Merchant_Currency__c.field-meta.xml
<CustomField>
    <fullName>ff_Merchant_Currency__c</fullName>
    <formula>TEXT(mp_merchant__r.CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Currency</label>
    <type>Text</type>
</CustomField>