force-app/main/default/objects/order_line_POE__c/fields/Gross_Cost__c.field-meta.xml
<CustomField>
    <fullName>Gross_Cost__c</fullName>
    <label>Gross Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>