force-app/main/default/objects/order_line_POE__c/fields/Has_Merchant_Portal_Access__c.field-meta.xml
<CustomField>
    <fullName>Has_Merchant_Portal_Access__c</fullName>
    <formula>IF(mp_merchant__r.Merchant_Portal_Access__c = True, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Merchant Portal Access</label>
    <type>Text</type>
</CustomField>