force-app/main/default/objects/order_line_POE__c/fields/Home_Currency__c.field-meta.xml
<CustomField>
    <fullName>Home_Currency__c</fullName>
    <formula>IF
( 
    OR(TAD_Order__r.RecordType.DeveloperName = &apos;TAD&apos;,TAD_Order__r.RecordType.DeveloperName = &apos;TC&apos;) , &apos;AUD&apos;, 
    IF
    (
        OR(TAD_Order__r.RecordType.DeveloperName = &apos;TNZ&apos;,TAD_Order__r.RecordType.DeveloperName = &apos;WT&apos;), &apos;NZD&apos;,&apos;&apos;
    )
)</formula>
    <label>Home Currency</label>
    <type>Text</type>
</CustomField>