force-app/main/default/objects/order_line_POE__c/fields/Home_Gross_Cost__c.field-meta.xml
<CustomField>
    <fullName>Home_Gross_Cost__c</fullName>
    <formula>IF(Home_Rate__c  &lt;&gt; 0,  Gross_Cost__c / Home_Rate__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Gross Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>