force-app/main/default/objects/order_line_POE__c/fields/Home_Rate__c.field-meta.xml
<CustomField>
    <fullName>Home_Rate__c</fullName>
    <formula>IF( ISBLANK( Quote_Detail__c ) , IF( Home_Currency__c = &apos;AUD&apos;,  Component_Pricing__r.Spot_Rate_AUD__c ,  IF(Home_Currency__c = &apos;NZD&apos;,  Component_Pricing__r.Spot_Rate_NZD__c , 0) ), IF( Home_Currency__c = &apos;AUD&apos;,   Quote_Detail__r.Spot_Rate_AUD__c  ,  IF(Home_Currency__c = &apos;NZD&apos;,   Quote_Detail__r.Spot_Rate_NZD__c  , 0) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>