force-app/main/default/objects/order_line_POE__c/fields/Is_Order_Ever_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Is_Order_Ever_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Order Ever Acknowledged</label>
    <type>Checkbox</type>
</CustomField>