force-app/main/default/objects/order_line_POE__c/fields/Live_Rate_Cost__c.field-meta.xml
<CustomField>
    <fullName>Live_Rate_Cost__c</fullName>
    <label>Live Rate Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>