force-app/main/default/objects/order_line_POE__c/fields/Max_Price_applied__c.field-meta.xml
<CustomField>
    <fullName>Max_Price_applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Max Price applied</label>
    <type>Checkbox</type>
</CustomField>