force-app/main/default/objects/order_line_POE__c/fields/Merchant_Type__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Type__c</fullName>
    <formula>TEXT(mp_merchant__r.Merchant_Type__c)</formula>
    <label>Merchant Type</label>
    <type>Text</type>
</CustomField>