force-app/main/default/objects/order_line_POE__c/fields/mp_merchant__c.field-meta.xml
<CustomField>
    <fullName>mp_merchant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines_POE</relationshipName>
    <type>Lookup</type>
</CustomField>