force-app/main/default/objects/order_line_POE__c/fields/mp_Merchant_Acknowledgement_Date__c.field-meta.xml
<CustomField>
    <fullName>mp_Merchant_Acknowledgement_Date__c</fullName>
    <label>BC Acknowledgement Date</label>
    <type>Date</type>
</CustomField>