force-app/main/default/objects/order_line_POE__c/fields/mp_Merchant_Acknowledgement_Status__c.field-meta.xml
<CustomField>
    <fullName>mp_Merchant_Acknowledgement_Status__c</fullName>
    <label>BC Acknowledgement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Acknowledged</fullName>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>