force-app/main/default/objects/order_line_POE__c/fields/mp_order_customisation__c.field-meta.xml
<CustomField>
    <fullName>mp_order_customisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Customisation</label>
    <referenceTo>Order_Customisations_POE__c</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>