force-app/main/default/objects/order_line_POE__c/fields/MP_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MP_Start_Date__c</fullName>
    <label>MP Start Date</label>
    <type>Date</type>
</CustomField>