force-app/main/default/objects/order_line_POE__c/fields/OL_Date_Allocation__c.field-meta.xml
<CustomField>
    <fullName>OL_Date_Allocation__c</fullName>
    <formula>Order_Line_Item__r.ordexp_departure_date__r.Total_Sold_Hold_POE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OL Date Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>