force-app/main/default/objects/order_line_POE__c/fields/OL_Type__c.field-meta.xml
<CustomField>
    <fullName>OL_Type__c</fullName>
    <label>OL type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Component</fullName>
            </value>
            <value>
                <fullName>Non-component</fullName>
            </value>
            <value>
                <fullName>Expedia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>