force-app/main/default/objects/order_line_POE__c/fields/Order_Acknowledgements__c.field-meta.xml
<CustomField>
    <fullName>Order_Acknowledgements__c</fullName>
    <formula>IF(  AND( ISPICKVAL( mp_Merchant_Acknowledgement_Status__c , &apos;Acknowledged&apos;),  Has_Merchant_Portal_Access__c = &quot;Yes&quot;) ,&apos;Acknowledged&apos;, &apos;Not Acknowledged&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Acknowledgement</label>
    <type>Text</type>
</CustomField>