force-app/main/default/objects/order_line_POE__c/fields/Order_Night__c.field-meta.xml
<CustomField>
    <fullName>Order_Night__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Night</label>
    <referenceTo>Order_Night_POE__c</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines_POE</relationshipName>
    <type>Lookup</type>
</CustomField>