force-app/main/default/objects/order_line_POE__c/fields/qty__c.field-meta.xml
<CustomField>
    <fullName>qty__c</fullName>
    <label>Order Quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>