force-app/main/default/objects/order_line_POE__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <formula>IF(  NOT(ISBLANK(TEXT( Order_Line_Item__r.Quantity__c))) ,TEXT(Order_Line_Item__r.Quantity__c) , TEXT( Order_Line_Item__r.PAX_Quantity__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OLI Pax/Qty</label>
    <type>Text</type>
</CustomField>