force-app/main/default/objects/order_line_POE__c/fields/Quote_Detail__c.field-meta.xml
<CustomField>
    <fullName>Quote_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Detail</label>
    <referenceTo>mp_Quote_Detail_POE__c</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines_POE</relationshipName>
    <type>Lookup</type>
</CustomField>