force-app/main/default/objects/order_line_POE__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>