force-app/main/default/objects/order_line_POE__c/fields/SR_Filter__c.field-meta.xml
<CustomField>
    <fullName>SR_Filter__c</fullName>
    <formula>Order_Line_Item__r.ordexp_Options__c +&apos;;&apos;+ Component__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR Filter</label>
    <type>Text</type>
</CustomField>