force-app/main/default/objects/order_line_POE__c/fields/SR_Status__c.field-meta.xml
<CustomField>
    <fullName>SR_Status__c</fullName>
    <formula>IF(TAD_Order__r.ordexp_tp_sent__c=true, &quot;TP Sent&quot;, IF( ISPICKVAL(mp_Merchant_Acknowledgement_Status__c	, &quot;Acknowledged&quot;), &quot;Acknowledged&quot;, IF(TAD_Order__r.ordexp_bc_sent__c=true, &quot;BC Sent&quot;, IF(TAD_Order__r.ordexp_amount_outstanding__c &lt;= 0 , &quot;Sold&quot;,&apos;&apos; ) ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR Status</label>
    <type>Text</type>
</CustomField>