force-app/main/default/objects/order_line_POE__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <formula>DATEVALUE(TAD_Order__r.ordexp_departure_date__r.Name)   +  Component__r.Start_Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>