force-app/main/default/objects/order_line_POE__c/fields/TAD_Order__c.field-meta.xml
<CustomField>
    <fullName>TAD_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAD Order</label>
    <referenceTo>TAD_Order__c</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines_POE</relationshipName>
    <type>Lookup</type>
</CustomField>