force-app/main/default/objects/order_line_POE__c/fields/TBR_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>TBR_Hyperlink__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) +  TAD_Booking_Records__r.Id , TAD_Booking_Records__r.Name , &apos;SELF&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TBR Hyperlink,</label>
    <type>Text</type>
</CustomField>