force-app/main/default/objects/order_line_POE__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <description>Payment Date</description>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>