force-app/main/default/objects/order_line_POE__c/fields/Unique_Key_for_DealDD_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key_for_DealDD_Mapping__c</fullName>
    <formula>IF( NOT( ISBLANK(  Deal__c ) ) &amp;&amp; NOT( ISBLANK(   Order_Line_Item__r.ordexp_departure_date__c ) ) , mp_merchant__r.Name + &quot;;&quot;+ Deal__r.Name +&quot;;&quot;+ Order_Line_Item__r.ordexp_departure_date__r.Name , &quot;Deal &amp; Departure Date Is  Empty&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Key for DealDD Mapping</label>
    <type>Text</type>
</CustomField>