force-app/main/default/objects/order_line_POE__c/fields/Unique_Key_for_Order_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key_for_Order_Mapping__c</fullName>
    <formula>IF( NOT( ISBLANK( TAD_Order__c ) ) , mp_merchant__r.Name + &quot;;&quot;+ TAD_Order__r.Name , &quot;TAD Order Is  Empty&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Key for Order Mapping</label>
    <type>Text</type>
</CustomField>