force-app/main/default/objects/order_line_POE__c/fields/Unique_Key_Sales_Report__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key_Sales_Report__c</fullName>
    <formula>/* Component__c +&apos;;&apos;+  IF( TEXT(Component__r.Component_Type__c)==&apos;Land Tour&apos; || TEXT(Component__r.Component_Type__c)==&apos;Cruise&apos; || TEXT(Component__r.Component_Type__c)==&apos;Accom&apos; || TEXT(Component__r.Component_Type__c)==&apos;Total Package&apos; || TEXT(Component__r.Component_Type__c)==&apos;Rail&apos; || TEXT(Component__r.Component_Type__c)==&apos;Transfer&apos; || TEXT(Component__r.Component_Type__c)==&apos;Day Tour&apos; || TEXT(Component__r.Component_Type__c)==&apos;Land&apos; || TEXT(Component__r.Component_Type__c)==&apos;Flight&apos; , &apos;st&apos; ,&apos;&apos;) */

Component__c +&apos;;&apos;+ IF( TEXT(Component__r.Component_Type__c)==&apos;Land Tour&apos; || TEXT(Component__r.Component_Type__c)==&apos;Cruise&apos; || TEXT(Component__r.Component_Type__c)==&apos;Accom&apos; || TEXT(Component__r.Component_Type__c)==&apos;Total Package&apos; || TEXT(Component__r.Component_Type__c)==&apos;Rail&apos; || TEXT(Component__r.Component_Type__c)==&apos;Transfer&apos; || TEXT(Component__r.Component_Type__c)==&apos;Land&apos; || TEXT(Component__r.Component_Type__c)==&apos;Flight&apos; , &apos;st&apos; ,&apos;&apos;)</formula>
    <label>Unique Key Sales Report</label>
    <type>Text</type>
</CustomField>