force-app/main/default/objects/order_line_POE__c/validationRules/Component_required_for_component_type_OL.validationRule-meta.xml
<ValidationRule>
    <fullName>Component_required_for_component_type_OL</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(OL_Type__c , &apos;Component&apos;) &amp;&amp; ISBLANK(Component__c)</errorConditionFormula>
    <errorDisplayField>Component__c</errorDisplayField>
    <errorMessage>Add a lookup to component</errorMessage>
</ValidationRule>