force-app/main/default/objects/order_line_POE__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TAD_Order__c</columns>
    <columns>Order_Line_Item__c</columns>
    <columns>Quantity__c</columns>
    <columns>Gross_Cost__c</columns>
    <columns>Status__c</columns>
    <columns>Component__c</columns>
    <columns>Component_Pricing__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>